@@ -1,4 +1,4 @@
-Copyright (c) 2014-2023 Michal Špaček
+Copyright (c) 2014-2023 Michal Josef Špaček
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without modification,
