@@ -48,12 +48,12 @@ REPOSITORY
     <https://github.com/michal-josef-spacek/Task-Map-Tube>
 
 AUTHOR
-    Michal Špaček <mailto:skim@cpan.org>
+    Michal Josef Špaček <mailto:skim@cpan.org>
 
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-     © 2014-2023 Michal Špaček
+     © 2014-2023 Michal Josef Špaček
      Artistic License
      BSD 2-Clause License
 
