@@ -85,13 +85,13 @@ L<https://github.com/michal-josef-spacek/Task-Map-Tube>
 
 =head1 AUTHOR
 
-Michal Špaček L<mailto:skim@cpan.org>
+Michal Josef Špaček L<mailto:skim@cpan.org>
 
 L<http://skim.cz>
 
 =head1 LICENSE AND COPYRIGHT
 
- © 2014-2023 Michal Špaček
+ © 2014-2023 Michal Josef Špaček
  Artistic License
  BSD 2-Clause License
 
